--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  scroll-behavior: smooth;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -11217,6 +11218,35 @@ p {
   overflow: hidden;
 }
 
+.contactblocks{
+  padding: 20px;
+}
+
+.contactblocks:hover{
+  background-color: whitesmoke;
+ }
+
+ .contactblocklink{
+   color: black;
+ }
+
+.fa{
+  font-size: 30px;
+  color: gray;
+}
+
+.topBtn {
+  float: right;
+  text-decoration: none;
+  padding: 10px 12px;
+  margin: 30px;
+  border-radius: 100%;
+}
+
+.topBtn:hover {
+  background-color: whitesmoke;
+}
+
 @media (prefers-reduced-motion: reduce) {
   .portfolio-card .portfolio-card-overlay {
     -webkit-transition: none;
@@ -11262,6 +11292,7 @@ p {
 
 .pricing-wrapper .pricing-card {
   display: block;
+  margin: 20px;
   border: 1px solid #dee2e6;
   padding: 30px 15px;
   -webkit-box-flex: 1;
